@@ -219,6 +219,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #5732: added a new command in Distutils: check.
+
 - Issue #5731: Distutils bdist_wininst no longer worked on non-Windows 
   platforms. Initial patch by Paul Moore.
 
